--- a/vignettes/hefty_smoothr.Rmd
+++ b/vignettes/hefty_smoothr.Rmd
@@ -17,85 +17,147 @@ knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>"
 )
+library(HeFTy.SmoothR)
 ```
 
 ## Some background
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+This document provides step-by-step instructions for producing density plots derived from HeFTy inverse thermal history models as seen in Padgett et al. (submitted) and Johns-Buss et al. (submitted). Part I explains how to export data from HeFTy and create an excel spreadsheet to load into R. Part II explains how to run the R code to produce the density plots. This tutorial assumes you have R and RStudio downloaded and installed. 
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
 
-```{r packages}
-library(readxl)
-library(dplyr)
-library(tibble)
-library(ggplot2)
-library(data.table)
-library(smoothr)
+```{r packages1, eval=FALSE, include=TRUE}
+install.packages("scico")
 library(scico)
-library(ggh4x)
+
+install.packages("scico")
 ```
+```{r packages2}
+library(ggplot2)
+```
+
+
+```{r packages3, eval=FALSE, include=TRUE}
+remotes::install_github("joelpadget/HeFTy_SmoothR")
+library(HeFTy.SmoothR)
+```
+
+## Prepare your HeFTy output
+
+1. Export tT data 
+  -	Open a thermal history model file (.hft or .hfm) in HeFTy. Once open, click on the “Inverse Modeling” button in the top left. Make sure your inverse modeling results are visible in your time-temperature window. 
+  
+ ![Figure 1](Fig1.jpg)
+
+  
+  -	Right-click inside the time-temperature window (for example, the location of the “X” in Figure 1).  Scroll down to “Export”. Click “Save as Text”. Save the .txt file. The text file should look similar to Figure 2.
+  -	Open a new excel (.xlsx) file. Copy all the text from the text file. Click on cell A1 in the newly-created and paste the copied-text. Your excel sheet should now look similar to the excel sheet in Figure 2. 
+
+ ![Figure 2](Fig2.jpg)
+
+
+
+2. Prepare tT Paths spreadsheet
+  -	Rename the sheet from “Sheet1” to “Paths”.
+  -	Find the row that reads (from column A to the right): “Fit”, “Comp. GOF”, … In Figure 3 this is row 26. Keep this row and delete every row in the table above this one. The result should look like Figure 4. 
+  
+  
+   ![Figure 3](Fig3.jpg)
+   
+   ![Figure 4](Fig4.jpg)
+   
+  -	Scroll to the rightmost column in the data sheet. This will vary for each sample depending on the model setup. In Figure 3, this is column AA.
+  -	Create a new sheet in the same .xlsx file. Call it “GOF”.
+  -	Copy columns A and B (named “Fit” and “Comp. GOF”) from the Paths sheet and paste them into the first two columns in the GOF sheet. Delete these columns from the Paths sheet. The resulting paths spreadsheet should look similar Figure 4. Return to the Paths sheet. 
+  -	Delete row 1 from Paths sheet. 
+  -	Find the column with that reads (from row 1 down): “Time (Ma)”, “Temperature”, “Time (Ma)”, “Temperature” … This is column D in Figure 4. Delete all columns before this one. The resulting table should look similar to Figure 5. 
+  
+   ![Figure 5](Fig5.jpg)
+  
+  -	Find the last column in the data table (column V in Figure 6). Values in this column should alternative 0 and a number, 0, and a number. Check that this pattern in maintained through the whole column. Also ensure that every row in the table ends at column V. 
+
+ ![Figure 6](Fig6.jpg)
+
+3. Prepare GOF spreadsheet
+  -	Open the GOF spreadsheet. 
+  -	Rename column B from “Comp. GOF” to “Comp_GOF”. Important: make sure there are no spaces in the column name.
+  -	Fill in this cell B2 with a “0”. It will likely be blank when you first paste these columns in the GOF sheet. If there is a non-zero value in cell B2, replace it with a 0. The resulting spreadsheet should look like Figure 6.
+  
+   ![Figure 6](Fig6.jpg)
+   
+  -	Select all of the data in the spreadsheet and under Sort & Filter click Filter. Click the dropdown arrow for Column B. Uncheck “Select All” and then check “0”. The resulting table should look similar to Figure 7.
+   ![Figure 8](Fig8.jpg)
+   
+  -	Select all of the filtered records and delete them. Note: if there are lots of records, you may need to do this in batches. 
+  -	Turn off the filter to view all of the remaining records. Check that cell the column labels are still in row 1 and that cell B2 says “Best”. Also check that every cell in column B has a numerical value in it. The values in column B should be decreasing. 
+  -	In cell C1, write the word “segment”. Be sure to write it exactly like this, all lower case and without a space after the “t”. 
+  -	Type the number “1” in cell C2. 
+  -	In cell C3, type the following equation (without the quotation marks): “= 1 + C2”. Apply this equation to all cells in the row by clicking on the cell and then double-clicking on the small box that appears in the bottom right corner of the cell. See Figure 8.
+  -	Copy all of column C and paste it as values into column D (right click and choose paste as values). Columns C and D should now look the same. Now delete Column C. The final table should look like Figure 8.
+  
+   ![Figure 8](Fig8.jpg)
+   
+  -	Save the spreadsheet as a .xlsx file.
 
 ## Load Input Data ------------------------------------------------------
 
-```{r data}
-hs.input <- read_xlsx("s4MM_v6.xlsx", sheet = 1, col_names = FALSE) # load t-T data
-
-hs.GOF <- read_xlsx("s4MM_v6.xlsx", sheet = 2, col_names = TRUE) # load GOF sheet
+Open R and define the path to your .xlsx file. For example:
+```{r fname,eval=FALSE}
+path2myfile <- "A:/Joel Padgett/Y121_Data/HeFTy_v2.0_Models/Y121_paths/Y121_paths.xlsx"
 ```
 
-### 3a. Create Spreadsheet -----------------------------------------------------
+> Be aware that R uses forwardslashes (/) to separate folders. 
 
-```{r data}
-
-hs.input <- hs.input %>%
-  dplyr::select(-"...1") %>% # select and remove the '...1' from the column names
-  combine_rows() %>% # run combine_rows function
-  mutate(segment = Assign_segment(time)) # run Assign_segment function on the time column of hs.input; then mutate function takes output of assign_segment
-
-hs.input.GOF <- merge(hs.input, hs.GOF, by = "segment")
+```{r fname2, include=FALSE}
+path2myfile <- system.file("s14MM_v1.xlsx", package = "HeFTy.SmoothR")
 ```
 
-### 3b. Subset Data  --------------------------------------------
+Next, you import the excel file into R by using the function `read_hefty_xlsx()`:
+```{r data,warning=FALSE, message=FALSE}
+tT_paths <- read_hefty_xlsx(path2myfile)
+```
 
-# Subset Data by Highest N GOF Values (If Desired)
-
-hs.input.GOF$rank <- dense_rank(-hs.input.GOF$Comp_GOF) # Rank Comp_GOF values with lowest rank (1) being highest GOF value
-hs.input <- filter(hs.input.GOF, rank <= 50) # Remove all t-T points with rank greater than N; new table shows top N GOF t-T points
-
-# Subset data by randmon N number of segments (If Desired)
-
-subset_segments <- hs.input %>% # get unique segments
-  distinct(segment) %>% # distinct() gets unique records from the desired field, segments
-  sample_n(N) # Randomly select N unique segments
-hs.input <- hs.input %>% # filter the original data for the segments selected in unique_segments
-  semi_join(subset_segments, by = "segment") # semi_join filters the original data to include only rows that match the selected segments
+# Plot the path density ---------------------------------------------
 
 
-# 4. Make Density Plot ---------------------------------------------
+To plot the density of the paths, you simply use the function `plot_path_density()`:
 
-hs.OG.denser <- hs.input %>%
-  mutate(x = time, y = temperature) %>%
-  sf::st_as_sf(coords = c("x", "y")) %>% # make a spatial feature where x and y are the spatial coordinates
-  summarise(do_union = FALSE) %>%
-  sf::st_cast("LINESTRING") %>%
-  sf::st_cast("MULTILINESTRING") %>%
-  smoothr::densify(n = 10L) # this sets the number of points that will be added to each segment. This can be changed as desired
+```{r seed1, include=FALSE}
+set.seed(123)
+```
 
-hs.OG.denser.coords <- sf::st_coordinates(hs.OG.denser)
-hs.OG.denser <- sf::st_drop_geometry(hs.OG.denser) %>%
-  cbind(hs.OG.denser.coords) %>%
-  rename(time = X, temperature = Y) %>%
-  dplyr::select(-L1, -L2)
+```{r plot1}
+plot1 <- plot_path_density(tT_paths)
+plot1
+```
+This uses the package's default values for smoothing and binning and creates a `ggplot` type graphic. 
 
-ggplot(data = hs.OG.denser, aes(x = time, y = temperature)) +
-  ggtitle("TITLE HERE") + # type title of plot and put in double quotes
-  coord_cartesian(xlim = c(110, 0), ylim = c(200, 0)) + # set x and y limits of plot
-  scale_x_continuous(breaks = seq(0, 110, 50), minor_breaks = seq(0, 110, by = 10), guide = "axis_minor") + # set the major ticks: (breaks = seq(0, 110, 50) --> axis major ticks go from 0 to 110 with divisions of 50. Set the minor ticks: minor_breaks = seq(0, 110, by = 10) --> minor ticks range from 0 to 110 with divisions of 10
-  scale_y_continuous(breaks = seq(200, 0, -20), minor_breaks = seq(200, 0, by = -10), guide = "axis_minor") + # set the major ticks: (breaks = seq(200, 0, -20) --> axis major ticks go from 220 to 0 with divisions of 20 (negative because 0 is at the top of the plot). Set the minor ticks: minor_breaks = seq(200, 0, by = -10) --> minor ticks range from 200 to 0 with divisions of 10 (negative because 0 is at the top of the plot)
-  geom_density2d_filled(contour_var = "ndensity", bins = 50) +
-  scico::scale_fill_scico_d(palette = "davos", direction = -1) + # view available color palette options: https://www.data-imaginist.com/posts/2018-05-30-scico-and-the-colour-conundrum/
-  theme(
-    legend.position = "none",
-    ggh4x.axis.ticks.length.minor = rel(1)
-  )
+
+You can customize the smoothing and density binning by changing the parameters
+- `bins` - the number of filled contours.
+- `GOF_threshold` - A low number when only the best constrained paths should be considered, and a large number when even less constrained paths can be considered. 
+- `densify` - Should extra points be added along the individual paths to ensure that not only the knickpoints of the path are evaluated? 
+- `n` - How many equally-spaced extra points should be added along between the knickpoints of the path (if `densify=TRUE`).
+- `samples` - Size of a random subsample of all the paths to reduce the computation time.
+
+
+```{r seed2, include=FALSE}
+set.seed(123)
+```
+
+```{r plot2}
+plot2 <- plot_path_density(tT_paths, bins = 25, GOF_threshold = 5, densify = TRUE, n = 100, samples = 100)
+plot2
+```
+
+Finally, you can also customize the ggplot for labeling, change colors, and reverse the axes: 
+
+```{r plot3}
+plot2 +
+  labs(title = "TITLE HERE", x = "Time (Ma)", y = bquote("Temperature (" * degree * ")")) + # type title of plot and put in double quotes
+  theme_bw() + # sets a ggplot theme
+  coord_cartesian(xlim = c(110, 0), ylim = c(200, 0), expand = FALSE) + # set x and y limits of plot
+  scale_x_continuous(breaks = seq(0, 110, 25), transform = "reverse") + # set the major ticks: (breaks = seq(0, 110, 50) --> axis major ticks go from 0 to 110 with divisions of 50. Set the minor ticks: minor_breaks = seq(0, 110, by = 10) --> minor ticks range from 0 to 110 with divisions of 10
+  scale_y_continuous(breaks = seq(200, 0, -20), transform = "reverse") + # set the major ticks: (breaks = seq(200, 0, -20) --> axis major ticks go from 220 to 0 with divisions of 20 (negative because 0 is at the top of the plot). Set the minor ticks: minor_breaks = seq(200, 0, by = -10) --> minor ticks range from 200 to 0 with divisions of 10 (negative because 0 is at the top of the plot)
+  scico::scale_fill_scico_d(palette = "davos", direction = -1) # view available color palette options: https://www.data-imaginist.com/posts/2018-05-30-scico-and-the-colour-conundrum/
+```
+
