--- a/vignettes/hefty_smoothr.Rmd
+++ b/vignettes/hefty_smoothr.Rmd
@@ -98,7 +98,7 @@ library(HeFTy.SmoothR)
    
   -	Save the spreadsheet as a .xlsx file.
 
-## Load Input Data ------------------------------------------------------
+## Load Input Data
 
 Open R and define the path to your .xlsx file. For example:
 ```{r fname,eval=FALSE}
@@ -116,7 +116,7 @@ Next, you import the excel file into R by using the function `read_hefty_xlsx()`
 tT_paths <- read_hefty_xlsx(path2myfile)
 ```
 
-## Plot the path density ---------------------------------------------
+## Plot the path density 
 
 
 To plot the density of the paths, you simply use the function `plot_path_density()`:
@@ -146,7 +146,7 @@ set.seed(123)
 ```
 
 ```{r plot2, out.width="100%"}
-plot2 <- plot_path_density_filled(tT_paths, bins = 25, GOF_rank = 5, densify = TRUE, n = 100, samples = 100, show.legend = FALSE)
+plot2 <- plot_path_density_filled(tT_paths, bins = 25, GOF_rank = 5, densify = TRUE, n = 100, max_distance = 1, samples = 100, show.legend = FALSE)
 plot2
 ```
 
@@ -157,7 +157,7 @@ plot2 +
   labs(title = "TITLE HERE", x = "Time (Ma)", y = bquote("Temperature (" * degree * ")")) + # type title of plot and put in double quotes
   theme_bw() + # sets a ggplot theme
   coord_cartesian(xlim = c(110, 0), ylim = c(200, 0), expand = FALSE) + # set x and y limits of plot
-  scale_x_continuous(breaks = seq(0, 110, 25), transform = "reverse") + # set the major ticks: (breaks = seq(0, 110, 50) --> axis major ticks go from 0 to 110 with divisions of 50.
+  scale_x_continuous(breaks = seq(0, 110, 25), transform = "reverse", position = "top") + # set the major ticks: (breaks = seq(0, 110, 50) --> axis major ticks go from 0 to 110 with divisions of 50.
   scale_y_continuous(breaks = seq(200, 0, -20), transform = "reverse") + # set the major ticks: (breaks = seq(200, 0, -20) --> axis major ticks go from 220 to 0 with divisions of 20 (negative because 0 is at the top of the plot). 
   scico::scale_fill_scico_d(palette = "davos", direction = -1) # view available color palette options: https://www.data-imaginist.com/posts/2018-05-30-scico-and-the-colour-conundrum/
 ```
