--- a/vignettes/hefty_smoothr.Rmd
+++ b/vignettes/hefty_smoothr.Rmd
@@ -29,8 +29,9 @@ This document provides step-by-step instructions for producing density plots der
 install.packages("scico")
 library(scico)
 
-install.packages("scico")
+install.packages("ggplot2")
 ```
+
 ```{r packages2}
 library(ggplot2)
 ```
@@ -158,7 +159,7 @@ plot2 +
   theme_bw() + # sets a ggplot theme
   coord_cartesian(xlim = c(110, 0), ylim = c(200, 0), expand = FALSE) + # set x and y limits of plot
   scale_x_continuous(breaks = seq(0, 110, 25), transform = "reverse", position = "top") + # set the major ticks: (breaks = seq(0, 110, 50) --> axis major ticks go from 0 to 110 with divisions of 50.
-  scale_y_continuous(breaks = seq(200, 0, -20), transform = "reverse") + # set the major ticks: (breaks = seq(200, 0, -20) --> axis major ticks go from 220 to 0 with divisions of 20 (negative because 0 is at the top of the plot). 
+  scale_y_continuous(breaks = seq(200, 0, -20), transform = "reverse") + # set the major ticks: (breaks = seq(200, 0, -20) --> axis major ticks go from 220 to 0 with divisions of 20 (negative because 0 is at the top of the plot).
   scico::scale_fill_scico_d(palette = "davos", direction = -1) # view available color palette options: https://www.data-imaginist.com/posts/2018-05-30-scico-and-the-colour-conundrum/
 ```
 
