--- a/vignettes/hefty_smoothr.Rmd
+++ b/vignettes/hefty_smoothr.Rmd
@@ -156,8 +156,9 @@ Finally, you can customize your ggplot, such as axes labels, change colors, and 
 ```{r plot3, out.width="100%"}
 plot2 +
   labs(title = "TITLE HERE", x = "Time (Ma)", y = bquote("Temperature (" * degree * ")")) + # type title of plot and put in double quotes
-  theme_bw() + # sets a ggplot theme
-  coord_cartesian(xlim = c(110, 0), ylim = c(200, 0), expand = FALSE) + # set x and y limits of plot
+  theme_classic() + # sets a ggplot theme
+  expand_limits(y=0, x = 0) + # set the limits of the plot
+  coord_cartesian(expand = FALSE) + #
   scale_x_continuous(breaks = seq(0, 110, 25), transform = "reverse", position = "top") + # set the major ticks: (breaks = seq(0, 110, 50) --> axis major ticks go from 0 to 110 with divisions of 50.
   scale_y_continuous(breaks = seq(200, 0, -20), transform = "reverse") + # set the major ticks: (breaks = seq(200, 0, -20) --> axis major ticks go from 220 to 0 with divisions of 20 (negative because 0 is at the top of the plot).
   scico::scale_fill_scico_d(palette = "davos", direction = -1) # view available color palette options: https://www.data-imaginist.com/posts/2018-05-30-scico-and-the-colour-conundrum/
